--- a/src/app/currency-item/currency-item.component.html
+++ b/src/app/currency-item/currency-item.component.html
@@ -1,4 +1,12 @@
 <article class="h-[5.8rem] flex justify-between items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border hover:bg-light-hover hover:dark:bg-dark-hover hover:cursor-pointer">
+    <div>
+        <i class="text-base bi bi-caret-left-fill text-dark-text dark:text-light-text"></i>
+        <strong class="text-dark-text dark:text-light-text">اطلاعات بیشتر</strong>
+    </div>
     <strong class="text-dark dark:text-light">{{currencyItem?.title}}</strong>
-    <img class="w-10 h-10 object-cover rounded-full" src="{{currencyItem?.img}}" alt="">
+    <div>
+        <strong *ngIf="currencyItem?.lastPriceInfo?.dt font-normal" class="text-dark dark:text-light">{{currencyItem?.lastPriceInfo?.dt === 'high' ? '+' : '-'}}</strong>
+        <strong class="text-dark dark:text-light font-normal">{{currencyItem?.lastPriceInfo?.dp}}%</strong>
+    </div>
+    <img class="w-8 h-8 object-cover rounded-full" src="{{currencyItem?.img}}" alt="">
 </article>
