singleton class for requests created

--- a/src/app/currency-item/currency-item.component.html
+++ b/src/app/currency-item/currency-item.component.html
@@ -13,8 +13,8 @@
     </div>
     <div class="flex">
         <div class="flex flex-col items-end justify-center pl-0.5 overflow-hidden text-ellipsis w-(--title-width) mr-3 mt-1">
-            <label class="text-dark dark:text-light font-byekan text-base">{{currencyItem?.title}}</label>
-            <label class="text-dark-text2 dark:text-light-text2 font-byekan font-normal text-sm">{{currencyItem?.shortedName}}</label>
+            <label class="text-dark dark:text-light font-byekan text-base font-bold leading-6">{{currencyItem?.title}}</label>
+            <label class="text-dark-text2 dark:text-light-text2 font-byekan font-normal leading-4.5 text-xs">{{currencyItem?.shortedName}}</label>
         </div>
         <img class="w-8 h-8 object-cover rounded-full" src="{{currencyItem?.img}}" alt="">
     </div>
