--- a/src/styles.css
+++ b/src/styles.css
@@ -106,6 +106,11 @@
     touch-action: pan-x;
 }
 
+.leading-4.\5 {
+    --tw-leading: calc(var(--spacing) * 1) /* 1rem = 18px */;
+    line-height: calc(var(--spacing) * 1) /* 1rem = 18px */;
+}
+
 .rtl {
     direction: rtl;
 }
