--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@
 
 
     --green-btn: #00d890;
+    --yellow-star: #e7c400;
 
 
 }
@@ -88,6 +89,7 @@
     --color-light-red-text: var(--light-red-text);
     
     --color-green-btn: var(--green-btn);
+    --color-yellow-star: var(--yellow-star);
 
 
 
@@ -95,6 +97,8 @@
     --title-width: calc(100% - 30px);
 
 
+    --font-byekanp: 'YekanP';
+    --font-yekan: 'Yekan';
     --font-byekan: 'BYekan';
     --font-vazir: 'Vazir';
     --font-helvetica: 'Helvetica';
@@ -107,8 +111,13 @@
 }
 
 .leading-4.\5 {
-    --tw-leading: calc(var(--spacing) * 1) /* 1rem = 18px */;
-    line-height: calc(var(--spacing) * 1) /* 1rem = 18px */;
+    --tw-leading: calc(var(--spacing) * 4.5) /* 1rem = 18px */;
+    line-height: calc(var(--spacing) * 4.5) /* 1rem = 18px */;
+}
+
+.text-2xs {
+    font-size: 0.625rem;
+    line-height: calc(1 / 0.625);
 }
 
 .rtl {
@@ -122,10 +131,19 @@
 
 
 @font-face {
-    font-family: 'BYekan';
-    src: url('./assets/fonts/Yekan.ttf');
+    font-family: 'YekanP';
+    src: url('./assets/fonts/yekanp.TTF');
 }
 
+@font-face {
+    font-family: 'BYekan';
+    src: url('./assets/fonts/BYekan.ttf');
+}
+
+@font-face {
+    font-family: 'Yekan';
+    src: url('./assets/fonts/Yekan.ttf');
+}
 
 @font-face {
     font-family: 'Vazir';
