--- a/src/styles.css
+++ b/src/styles.css
@@ -49,8 +49,6 @@
 
     --green-btn: #00d890;
     --yellow-star: #e7c400;
-
-
 }
 
 @theme inline {
@@ -95,13 +93,14 @@
 
 
     --title-width: calc(100% - 30px);
+    --text-2xs: 0.625rem;
 
 
     --font-byekanp: 'YekanP';
     --font-yekan: 'Yekan';
     --font-byekan: 'BYekan';
+    --font-byekan-plus: 'BYekanPLUS';
     --font-vazir: 'Vazir';
-    --font-helvetica: 'Helvetica';
 }
 
 .scroll-snap-x {
@@ -115,10 +114,6 @@
     line-height: calc(var(--spacing) * 4.5) /* 1rem = 18px */;
 }
 
-.text-2xs {
-    font-size: 0.625rem;
-    line-height: calc(1 / 0.625);
-}
 
 .rtl {
     direction: rtl;
@@ -151,6 +146,6 @@
 }
 
 @font-face {
-  font-family: 'Helvetica';
-  src: url('./assets/fonts/Helvetica.ttf');
+    font-family: 'BYekanPLUS';
+    src: url('./assets/fonts/BYekan+\ Bold.ttf');
 }
