currency item styles are almost completed

--- a/src/styles.css
+++ b/src/styles.css
@@ -147,5 +147,5 @@
 
 @font-face {
     font-family: 'BYekanPLUS';
-    src: url('./assets/fonts/BYekan+\ Bold.ttf');
+    src: url('./assets/fonts/BYekan_Bold.ttf');
 }
