--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,3 +3,41 @@
     font-size: 0.625rem;
     line-height: calc(1 / 0.625);
 }
+.margin-inline-7 {
+    margin-inline: 0;
+}
+
+
+.padding-vertical-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.padding-inline-4 {
+    padding-inline: 1rem;
+}
+
+
+/* sm */
+@media (width >= 40rem /* 640px */) {
+    .margin-inline-7 {
+        margin-inline: 12.5%;
+    }
+
+    .padding-vertical-2 {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    .padding-inline-4 {
+        padding-inline: 0;
+    }
+}
+
+/* md */
+@media (width >= 48rem /* 768px */) {
+    .padding-vertical-2 {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+}
