--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,43 @@
-<main class="bg-light dark:bg-dark w-full">
-    @for (item of reqestClass?.allItemsList; track item.id) {
-        <currency-item [currencyItem]="item"/>
-    
-    }
+<!-- <main >
+    <div class="margin-inline-7">
+        @for (item of reqestClass?.allItemsList; track item.id) {
+            <currency-item [currencyItem]="item"/>
+        }
+    </div> -->
+    <!-- *ngFor="let item of reqestClass?.allItemsList"
+    <div class="h-[5rem] w-[20%]">
+
+     </div>
+</main> -->
+
+<main class="w-full bg-light dark:bg-dark">
+    <div class="margin-inline-7 padding-inline-4 flex justify-between padding-vertical-2 items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
+        <div class="flex gap-3 flex-row justify-center items-center">
+            <div class="flex flex-col">
+                <i class="text-dark-text3 dark:text-light-text3 text-xs bi bi-caret-up-fill"></i>
+                <i class="text-dark-text3 dark:text-light-text3 text-xs bi bi-caret-down-fill -translate-y-"></i>
+            </div>
+            <p class="font-byekan-plus sm:font-byekan-persian text-dark-text3 dark:text-light-text3 text-xs sm:text-sm md:text-base">{{change24hText()}}</p>
+        </div>
+        <div class="flex gap-3 flex-row justify-center items-center">
+            <div class="flex flex-col">
+                <i class="text-dark-text3 dark:text-light-text3 text-xs bi bi-caret-up-fill"></i>
+                <i class="text-dark-text3 dark:text-light-text3 text-xs bi bi-caret-down-fill -translate-y-"></i>
+            </div>
+            <p class="font-byekan-persian text-dark-text3 dark:text-light-text3 text-xs sm:text-sm md:text-base">قیمت</p>
+
+        </div>
+        <div class="flex gap-3 flex-row justify-center items-center">
+            <div class="flex flex-col">
+                <i class="text-dark-text3 dark:text-light-text3 text-xs bi bi-caret-up-fill"></i>
+                <i class="text-dark-text3 dark:text-light-text3 text-xs bi bi-caret-down-fill -translate-y-"></i>
+            </div>
+            <p class="font-byekan-persian text-dark-text3 dark:text-light-text3 text-xs sm:text-sm md:text-base">نام</p>
+        </div>
+    </div>
+    <div class="mx-0 margin-inline-7">
+        @for (item of reqestClass?.mainCurrencyList; track item.id) {
+            <currency-item [currencyItem]="item"/>
+        }
+    </div>
 </main>
