Main Categories added

--- a/src/app/currency-item/currency-item.component.html
+++ b/src/app/currency-item/currency-item.component.html
@@ -10,6 +10,7 @@
         <strong class="text-dark-text dark:text-light-text font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5">{{currencyItem?.lastPriceInfo?.p}}</strong>
         <strong class="text-dark-text2 dark:text-light-text2 font-normal font-yekan text-2xs md:text-sm">{{currencyItem?.unit}}</strong>
     </div>
+    <p class="text-dark dark:text-light">{{currencyItem?.rialStringRealPrice}}</p>
     <div class="flex justify-end items-start gap-1.5 flex-1">
         <div class="flex pl-0.5 overflow-hidden text-ellipsis">
             <div class="flex flex-col items-end justify-start">
