--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,9 @@
     --light-text: #fefffe;
     ---dark-text: #222;
 
+    --dark-highlight: #202020;
+    --light-highlight: #e7ebea;
+
     --light-text2: #949696;
     --dark-text2: #818383;
 
@@ -78,6 +81,9 @@
     
     --color-light-text: var(--light-text);
     --color-dark-text: var(--dark-text);
+
+    --color-dark-highlight: var(--dark-highlight);
+    --color-light-highlight: var(--light-highlight);
     
     --color-light-text2: var(--light-text2);
     --color-dark-text2: var(--dark-text2);
